name:                cor
version:             0.1.0.0
license:             ISC
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikko.juola+dev@iki.fi
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.AdaptiveCoordinateDescent
  build-depends:       base >=4.6 && <5.0
                      ,hmatrix
                      ,mtl
                      ,pipes
                      ,primitive
                      ,mwc-random
                      ,vector
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010
